--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
               })
             ),
             React.createElement('h1', null, 'Aryan Aryal'),
-            React.createElement('p', null, 'Hacker')
+            React.createElement('p', null, 'Cybersecurity Specialist')
           ),
           React.createElement(
             'div',
